<resources>
    <string name="app_name">Assignment_test</string>
    <string name="appTitle">SmartFit</string>
    <string name="loginTitle">LOGIN</string>
    <string name="login_title2">HERE</string>
    <string name="password">Password: </string>
    <string name="usernameInput" />
    <string name="passwordInput" />
    <string name="login_button">LOGIN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signUpTitle">SIGN UP</string>
    <string name="signup_button">START</string>
    <string name="retypePassword">Retype-Password:</string>
    <string name="SignUpText">-------- You already have an account? --------</string>
    <string name="goLogin">LOGIN NOW!</string>
    <string name="welcome">WELCOME !</string>
    <string name="sub1_longword">Hello!\nHere are some question to tailor a personalized plan for you.</string>
    <string name="letsgo">Let\'s GO</string>
    <string name="GoalsandFocus"><![CDATA[About You >>>]]></string>
    <string name="whatIsYourGender">What\'s your gender ?</string>
    <string name="genderDes">Knowing ypur gender can help us tailor the intensity for you based on different metobolic rate.</string>
    <string name="whatyourname">What\'s your name?</string>
    <string name="next">NEXT</string>
    <string name="howoldareu">Hey yo, how old are you?</string>
    <string name="whatyourheight">What\'s Your height?</string>
    <string name="whatyouweight">What\'s your current weight?</string>
    <string name="completelaststep">Complete the last step</string>
    <string name="email">Email :</string>
    <string name="pwd">Password :</string>
    <string name="Retypepwd">Retype-Password :</string>
    <string name="Congratulation">CONGRATULATIONS !</string>
    <string name="doneDes">Sign-Up successful ! You now can enjoy all the features in this apps.</string>
    <string name="havaaniceday">Have a nice day 😉</string>
    <string name="male">Male</string>
    <string name="Female">Female</string>
    <string name="nutritionguide">Nutrition Guide</string>
    <string name="nutritionDes">To have a strong body, besides exercising, nutrients from food are also essential.</string>
    <string name="workOutPointTextField"></string>
    <string name="leaderboard_user_image">The user image of leaderboard ranking</string>
    <string name="user_leaderboard_name1" />
    <string name="user_leaderboard_name3" />
    <string name="user_leaderboard_name2" />
    <string name="user_contributed_work_out_point1" />
    <string name="user_contributed_work_out_point2" />
    <string name="user_contributed_work_out_point3" />
    <string name="leaderboard_title">Leaderboard\n</string>
    <string name="planting_tree_title">Power Plant Challenge</string>
    <string name="power_plant_score_text"></string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="enter_new_password_again">Enter New Password Again</string>
    <string name="phone_6012312312">Phone : +6012312312</string>
    <string name="whatsapp_6012312312">Whatsapp : +6012312312</string>
    <string name="email_abc123_gmail_com">Email : abc123@gmail.com</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="total_duration">Total Duration</string>
    <string name="_123">123</string>
    <string name="average_duration">Average Duration</string>
    <string name="total_kcal_burnt">Total Kcal Burnt</string>
    <string name="average_kcal_burnt">Average Kcal Burnt</string>
    <string name="_53">53</string>
    <string name="hello">Hello,</string>
    <string name="fitness">Fitness</string>
    <string name="strength">Strength</string>
    <string name="endure">Endure</string>
    <string name="discover_the_many_benefits_of_this_fitness_app">Discover The Many Benefits Of This Fitness App</string>
    <string name="nutrition_guide">Nutrition Guide</string>
    <string name="daily_tips">Daily Tips</string>
    <string name="backbtn">backbtn</string>
    <string name="sit_up">Sit Up</string>
    <string name="previousbtn">previousBtn</string>
    <string name="pausebtn">pauseBtn</string>
    <string name="nextbtn">nextBtn</string>
    <string name="burpees">Burpees</string>
    <string name="_1_minute">1 Minute</string>
    <string name="jumping_jacks">Jumping Jacks</string>
    <string name="_40_seconds">40 Seconds</string>
    <string name="standing_criss_cross">Standing Criss-Cross</string>
    <string name="nothing">nothing</string>
    <string name="report">Report</string>
    <string name="workout_duration">Workout Duration</string>
    <string name="dialogMessage">We are leading a movement to plant 160 billion trees to stop otherwise unavoidable climate catastrophe.\n\nA quirky take on our standard definition of a power plant, this movement will give a new interpretation to a chief cause of Earth’s climate crisis and turn both the meaning and the looming catastrophe upside down. Scientists have shown that reducing greenhouse emissions is only part of the solution to solving the climate crisis. CO2 still needs to be massively reduced from the atmosphere as part of a survivable scenario. Nature based solutions to restore and protect natural carbon sinks are the second part of the solution to reducing atmospheric concentrations of carbon dioxide – a simple way that every one of us can contribute is by planting more trees!\n\nWe call this our #PowerPlantChallenge and you can help to plant 1 tree by using each 100 WorkOut Points.</string>
</resources>