<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/planting_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/planting_tree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".PlantingTreeActivity"
        >


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/planting_video"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_user_total_contributed_text"
            app:lottie_autoPlay="false"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/planting_video1" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/leaderboard_crown"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            android:rotationX="1.5"
            android:rotationY="1.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/leaderboard_title"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/leaderboard_crown" />

        <TextView
            android:id="@+id/workOutPointTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/workOutPointTextField"
            app:layout_constraintEnd_toEndOf="@+id/planting_video"
            app:layout_constraintStart_toStartOf="@+id/planting_video"
            app:layout_constraintTop_toBottomOf="@+id/planting_video" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/leaderboard_image_first"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:layout_constraintEnd_toEndOf="@+id/leaderboard_crown"
            app:layout_constraintStart_toStartOf="@+id/leaderboard_crown"
            app:layout_constraintTop_toBottomOf="@+id/leaderboard_crown"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/leaderboard1" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/leaderboard_image_third"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@+id/leaderboard_crown"
            app:layout_constraintTop_toBottomOf="@+id/leaderboard_crown"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/leaderboard2" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/leaderboard_image_second"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toStartOf="@+id/leaderboard_crown"
            app:layout_constraintTop_toBottomOf="@+id/leaderboard_crown"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/leaderboard3" />

    <!--    <ImageView
            android:id="@+id/leaderboard_image_first"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/leaderboard_user_image"
            app:layout_constraintEnd_toEndOf="@+id/leaderboard_crown"
            app:layout_constraintStart_toStartOf="@+id/leaderboard_crown"
            app:layout_constraintTop_toBottomOf="@+id/leaderboard_crown"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/leaderboard_image_second"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/leaderboard_user_image"
            app:layout_constraintStart_toEndOf="@+id/leaderboard_crown"
            app:layout_constraintTop_toBottomOf="@+id/leaderboard_crown"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/leaderboard_image_third"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/leaderboard_user_image"
            app:layout_constraintEnd_toStartOf="@+id/leaderboard_crown"
            app:layout_constraintTop_toBottomOf="@+id/leaderboard_crown"
            tools:srcCompat="@tools:sample/avatars" />-->

        <TextView
            android:id="@+id/user_leaderboard_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/user_leaderboard_name1"
            app:layout_constraintEnd_toEndOf="@+id/leaderboard_image_first"
            app:layout_constraintStart_toStartOf="@+id/leaderboard_image_first"
            app:layout_constraintTop_toBottomOf="@+id/leaderboard_image_first" />

        <TextView
            android:id="@+id/user_leaderboard_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/user_leaderboard_name2"
            app:layout_constraintEnd_toEndOf="@+id/leaderboard_image_second"
            app:layout_constraintStart_toStartOf="@+id/leaderboard_image_second"
            app:layout_constraintTop_toBottomOf="@+id/leaderboard_image_second" />

        <TextView
            android:id="@+id/user_leaderboard_name3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/user_leaderboard_name3"
            app:layout_constraintEnd_toEndOf="@+id/leaderboard_image_third"
            app:layout_constraintStart_toStartOf="@+id/leaderboard_image_third"
            app:layout_constraintTop_toBottomOf="@+id/leaderboard_image_third" />

        <TextView
            android:id="@+id/user_contributed_work_out_point1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/user_contributed_work_out_point1"
            app:layout_constraintEnd_toEndOf="@+id/user_leaderboard_name1"
            app:layout_constraintStart_toStartOf="@+id/user_leaderboard_name1"
            app:layout_constraintTop_toBottomOf="@+id/user_leaderboard_name1" />

        <TextView
            android:id="@+id/user_contributed_work_out_point2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/user_contributed_work_out_point2"
            app:layout_constraintEnd_toEndOf="@+id/user_leaderboard_name2"
            app:layout_constraintStart_toStartOf="@+id/user_leaderboard_name2"
            app:layout_constraintTop_toBottomOf="@+id/user_leaderboard_name2" />

        <TextView
            android:id="@+id/user_contributed_work_out_point3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/user_contributed_work_out_point3"
            app:layout_constraintEnd_toEndOf="@+id/user_leaderboard_name3"
            app:layout_constraintStart_toStartOf="@+id/user_leaderboard_name3"
            app:layout_constraintTop_toBottomOf="@+id/user_leaderboard_name3" />

        <TextView
            android:id="@+id/leaderboard_title"
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:layout_marginTop="35dp"
            android:text="@string/leaderboard_title"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/workOutPointTextField"
            app:layout_constraintStart_toStartOf="@+id/workOutPointTextField"
            app:layout_constraintTop_toBottomOf="@+id/workOutPointTextField"
            app:layout_goneMarginBaseline="0dp" />

        <TextView
            android:id="@+id/planting_tree_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/planting_tree_title"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/current_user_total_contributed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="-55dp"
            android:text="@string/power_plant_score_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/planting_tree_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/leaderboardRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/leaderboard_stage"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="16dp"
            tools:listitem="@layout/leaderboard_user_item" />

        <ImageView
            android:id="@+id/leaderboard_stage"
            android:layout_width="223.5dp"
            android:layout_height="150dp"
            android:layout_marginTop="70dp"
            android:scaleX="2.3"
            app:layout_constraintEnd_toEndOf="@+id/leaderboard_image_first"
            app:layout_constraintStart_toStartOf="@+id/leaderboard_image_first"
            app:layout_constraintTop_toBottomOf="@+id/leaderboard_image_first"
            app:srcCompat="@drawable/leaderboard_stage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>